--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="colorWarning">#ffe066</color>
     <color name="colorHome">#e6ecff</color>
     <color name="colorGreen">#00a884</color>
+    <color name="colorError">#FFAE0655</color>
 
     <!--Ravindu Wataketiya -->
 
