manuka - post ad changed to activity

--- a/app/src/main/res/layout/activity_advertisement.xml
+++ b/app/src/main/res/layout/activity_advertisement.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#e6ecff"
     android:orientation="vertical"
-    tools:context=".activity.advertisement.Advertisement">
+    tools:context=".ui.advertisement.Advertisement">
 
     <!-- Manuka -->
 
