--- a/app/src/main/res/layout/activity_edit_advertisement.xml
+++ b/app/src/main/res/layout/activity_edit_advertisement.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#e6ecff"
-    tools:context=".activity.advertisement.EditAdvertisement">
+    tools:context=".ui.advertisement.EditAdvertisement">
 
     <!-- Manuka -->
 
