--- a/app/src/main/res/layout/manuka_activity_splash_main_app.xml
+++ b/app/src/main/res/layout/manuka_activity_splash_main_app.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorGreen"
-    tools:context=".activity.SplashMainAppActivity">
+    tools:context=".ui.SplashMainAppActivity">
 
         <LinearLayout
             android:id="@+id/linearlayoutSplashMain"
