--- a/app/src/main/res/layout/manuka_fragment_step_success.xml
+++ b/app/src/main/res/layout/manuka_fragment_step_success.xml
@@ -8,7 +8,7 @@ android:orientation="vertical"
 android:gravity="center"
 android:padding="16dp"
 android:background="@color/colorWhite"
-tools:context=".fragment.Order.StepSuccess">
+tools:context=".ui.Order.StepSuccess">
 
 <!-- Manuka -->
 
