--- a/app/src/main/res/layout/activity_donations.xml
+++ b/app/src/main/res/layout/activity_donations.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#e6ecff"
-    tools:context=".activity.advertisement.Donations">
+    tools:context=".ui.advertisement.Donations">
 
     <!-- Manuka -->
 
