--- a/app/src/main/res/layout/activity_myadds.xml
+++ b/app/src/main/res/layout/activity_myadds.xml
@@ -6,7 +6,7 @@
     android:background="#e6ecff"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.advertisement.Myadds">
+    tools:context=".ui.advertisement.Myadds">
 
     <!-- Manuka -->
 
