--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#e6ecff"
     android:orientation="vertical"
-    tools:context=".fragment.Home">
+    tools:context=".ui.home.Home">
 
     <!-- Manuka -->
 
