--- a/app/src/main/res/layout/manuka_fragment_step1.xml
+++ b/app/src/main/res/layout/manuka_fragment_step1.xml
@@ -6,7 +6,7 @@
     android:background="@color/colorWhite"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".fragment.Order.Step1"
+    tools:context=".ui.Order.Step1"
     tools:ignore="LabelFor">
 
     <!-- Manuka -->
