--- a/app/src/main/res/layout/manuka_fragment_step2.xml
+++ b/app/src/main/res/layout/manuka_fragment_step2.xml
@@ -6,7 +6,7 @@ android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:orientation="vertical"
 android:background="@color/colorHome"
-tools:context=".fragment.Order.Step2">
+tools:context=".ui.Order.Step2">
 
 <!-- Manuka -->
 
