--- a/app/src/main/res/layout/ravindu_activity_add_new_suggestion.xml
+++ b/app/src/main/res/layout/ravindu_activity_add_new_suggestion.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="10dp"
-    tools:context=".activity.getintouch.AddNewSuggestionActivity"
+    tools:context=".ui.getintouch.AddNewSuggestionActivity"
     android:background="@color/colorHome">
 
     <TextView
