--- a/app/src/main/res/layout/ravindu_activity_bugs_actions.xml
+++ b/app/src/main/res/layout/ravindu_activity_bugs_actions.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="10dp"
-    tools:context=".activity.getintouch.BugsActionsActivity"
+    tools:context=".ui.getintouch.BugsActionsActivity"
     android:background="@color/colorHome">
 
     <TextView
