--- a/app/src/main/res/layout/ravindu_activity_get_in_touch.xml
+++ b/app/src/main/res/layout/ravindu_activity_get_in_touch.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.getintouch.GetInTouchActivity"
+    tools:context=".ui.getintouch.GetInTouchActivity"
     android:background="@color/colorHome">
 
     <LinearLayout
