manuka - new post fragment added

--- a/app/src/main/res/layout/manuka_activity_new_ad_categories.xml
+++ b/app/src/main/res/layout/manuka_activity_new_ad_categories.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#e6ecff"
     android:orientation="vertical"
-    tools:context=".ui.home.NewPost">
+    tools:context=".ui.advertisement.AllCategoriesNewPost">
 
     <include layout="@layout/toolbar"
         android:id="@+id/toolbar"
@@ -18,90 +18,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <LinearLayout
+        <FrameLayout
+            android:id="@+id/newPostFragmentCont"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"></FrameLayout>
 
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:layout_marginBottom="10dp"
-                android:background="#ffffff"
-                android:orientation="horizontal"
-                android:padding="10dp">
-
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:gravity="center_vertical"
-                    android:layout_margin="10dp"
-                    android:background="@drawable/icon_rules_medium"></ImageView>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/posting_allowance"
-                        android:textAlignment="textStart"
-                        android:textColor="#000000"
-                        android:textStyle="bold"
-                        android:textSize="14dp"></TextView>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/free_on_ronicy"
-                        android:textAlignment="textStart"
-                        android:textColor="#b3b3b3"
-                        android:textSize="14dp"></TextView>
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="14dp"
-                android:layout_weight="2"
-                android:background="#ffffff"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="70dp"
-                    android:paddingStart="18dp"
-                    android:gravity="center_vertical"
-                    android:text="@string/all_categories"
-                    android:textColor="#b3b3b3"
-                    android:textSize="16dp"></TextView>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:paddingStart="18dp"
-                    android:layout_height="70dp"
-                    android:gravity="center_vertical"
-                    android:background="#0066ff"
-                    android:text="@string/sell_an_item"
-                    android:textColor="#ffffff"
-                    android:textSize="16dp"></TextView>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/CategoryListPost"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-
-                </androidx.recyclerview.widget.RecyclerView>
-            </LinearLayout>
-
-        </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
 </RelativeLayout>
