manuka - category seleted added

--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -13,6 +13,7 @@
         android:title="Search"></item>
     <item
         android:id="@+id/navAddPost"
+        android:checkable="false"
         android:icon="@drawable/ic_baseline_add_box_24"
         android:title="New"></item>
     <item
