--- a/app/src/main/res/layout/manuka_activity_new_ad_categories.xml
+++ b/app/src/main/res/layout/manuka_activity_new_ad_categories.xml
@@ -6,23 +6,37 @@
     android:layout_height="match_parent"
     android:background="#e6ecff"
     android:orientation="vertical"
-    tools:context=".ui.advertisement.AllCategoriesNewPost">
+    tools:context=".ui.newPost.AllCategoriesNewPost">
 
-    <include layout="@layout/toolbar"
+    <include
         android:id="@+id/toolbar"
-        ></include>
+        layout="@layout/toolbar"></include>
     <!-- Manuka -->
 
     <androidx.core.widget.NestedScrollView
-        android:layout_below="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar">
 
-        <FrameLayout
-            android:id="@+id/newPostFragmentCont"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></FrameLayout>
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <FrameLayout
+                android:id="@+id/newPostFragmentCont"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
+            <FrameLayout
+                android:id="@+id/newPostFragmentCont2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <FrameLayout
+                android:id="@+id/newPostFragmentCont3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
 </RelativeLayout>
