--- a/app/src/main/res/layout/manuka_fragment_categories_new_post.xml
+++ b/app/src/main/res/layout/manuka_fragment_categories_new_post.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#e6ecff"
     android:orientation="vertical"
-    tools:context=".ui.advertisement.AllCategoriesNewPost">
+    tools:context=".ui.newPost.AllCategoriesNewPost">
 
     <!-- Manuka -->
 
