--- a/app/src/main/res/layout/manuka_activity_new_ad_categories.xml
+++ b/app/src/main/res/layout/manuka_activity_new_ad_categories.xml
@@ -36,6 +36,12 @@
                 android:id="@+id/newPostFragmentCont3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
+
+            <FrameLayout
+                android:id="@+id/newPostFragmentCont4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
