--- a/app/src/main/res/layout/manuka_fragment_advertisement_details.xml
+++ b/app/src/main/res/layout/manuka_fragment_advertisement_details.xml
@@ -1,27 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#e6ecff"
+    android:layout_height="wrap_content"
+    android:background="@color/colorHome"
+    android:layout_marginBottom="10dp"
     android:orientation="vertical"
     tools:context=".ui.newPost.AdvertisementDetails">
 
-    <!-- Manuka -->
-
-    <androidx.core.widget.NestedScrollView
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:textColor="#CC000000"
+        android:gravity="center"
+        android:text="@string/post_add_1_image"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="30dp"
+            android:background="@color/colorWhite"
+            android:padding="24dp"
             android:orientation="vertical">
 
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                android:background="@drawable/ic_camera"
+                android:contentDescription="@string/image" />
 
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="@string/post_add_image_btn"
+                android:background="@color/colorGreen"
+                android:textColor="@color/colorWhite"
+                android:textSize="16sp"
+                android:textAllCaps="false"/>
 
         </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
 
-</RelativeLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:textColor="#CC000000"
+        android:gravity="center"
+        android:text="@string/post_details"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="30dp"
+        android:background="#ffffff"
+        android:orientation="vertical"
+        android:padding="24dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:layout_marginBottom="6dp"
+            android:gravity="center"
+            android:labelFor="@+id/newAdTitle"
+            android:text="@string/post_title"
+            android:textColor="#a6a6a6"
+            android:textSize="14sp"></TextView>
+
+        <EditText
+            android:id="@+id/newAdTitle"
+            android:layout_width="300dp"
+            android:layout_height="40dp"
+            android:layout_marginBottom="40dp"
+            android:importantForAutofill="no"
+            android:inputType="textPersonName"
+            android:textSize="18sp"></EditText>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:layout_marginBottom="6dp"
+            android:gravity="center"
+            android:labelFor="@+id/newAdSubject"
+            android:text="@string/post_condition"
+            android:textColor="#a6a6a6"
+            android:textSize="14sp"></TextView>
+
+        <EditText
+            android:id="@+id/newAdSubject"
+            android:layout_width="300dp"
+            android:layout_height="40dp"
+            android:layout_marginBottom="40dp"
+            android:importantForAutofill="no"
+            android:inputType="textPersonName"
+            android:textSize="18sp"></EditText>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:layout_marginBottom="6dp"
+            android:gravity="center"
+            android:labelFor="@+id/newAdDescription"
+            android:text="@string/post_description"
+            android:textColor="#a6a6a6"
+            android:textSize="14sp"></TextView>
+
+        <EditText
+            android:id="@+id/newAdDescription"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="40dp"
+            android:gravity="top|start"
+            android:importantForAutofill="no"
+            android:inputType="textMultiLine"
+            android:lines="4"
+            android:maxLines="10"
+            android:minLines="4"
+            android:scrollbars="vertical"
+            android:textSize="18sp"></EditText>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:layout_marginBottom="6dp"
+            android:gravity="center"
+            android:labelFor="@+id/newAdPrice"
+            android:text="@string/post_price"
+            android:textColor="#a6a6a6"
+            android:textSize="14sp"></TextView>
+
+        <EditText
+            android:id="@+id/newAdPrice"
+            android:layout_width="300dp"
+            android:layout_height="40dp"
+            android:layout_marginBottom="40dp"
+            android:importantForAutofill="no"
+            android:inputType="phone"
+            android:textSize="18sp"></EditText>
+
+    </LinearLayout>
+
+
+</LinearLayout>
