--- a/app/src/main/res/layout/manuka_fragment_location_selector.xml
+++ b/app/src/main/res/layout/manuka_fragment_location_selector.xml
@@ -40,6 +40,12 @@
             android:textSize="20sp"
             android:importantForAutofill="no" />
 
+        <LinearLayout
+            android:id="@+id/locationExtraLayout"
+            android:visibility="visible"
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
         <TextView
             android:layout_marginTop="40dp"
             android:layout_width="match_parent"
@@ -66,6 +72,14 @@
             android:text="@string/changeLocation"
             android:gravity="center"
             android:textSize="14sp"/>
+        </LinearLayout>
+
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/locationSelectorProgress"
+        android:layout_marginTop="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"/>
 
 </LinearLayout>
