--- a/app/src/main/res/layout/manuka_fragment_contact_details.xml
+++ b/app/src/main/res/layout/manuka_fragment_contact_details.xml
@@ -67,57 +67,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginStart="4dp"
                     android:layout_marginTop="20dp"
-                    android:layout_marginEnd="4dp"
-                    android:background="#66000000" />
+                    android:background="#52000000" />
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10sp">
-
-                </androidx.recyclerview.widget.RecyclerView>
-
-                <RelativeLayout
+                    android:id="@+id/phoneNumbersRecycler"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <TextView
-                        android:id="@+id/phoneNumber"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginStart="9dp"
-                        android:layout_marginTop="4dp"
-                        android:layout_marginEnd="10dp"
-                        android:text="0775454565"
-                        android:textColor="@color/colorBlack"
-                        android:textSize="18sp" />
-
-                    <ImageView
-                        android:id="@+id/phoneNumberVerified"
-                        android:layout_width="60dp"
-                        android:layout_height="20dp"
-                        android:layout_centerVertical="true"
-                        android:layout_marginEnd="66dp"
-                        android:layout_toRightOf="@id/phoneNumber"
-                        android:background="@drawable/icon_verified_small" />
-
-                    <ImageView
-                        android:id="@+id/phoneNumberRemove"
-                        android:layout_width="28dp"
-                        android:layout_height="30dp"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginTop="0dp"
-                        android:layout_marginEnd="0dp"
-                        android:layout_toRightOf="@id/phoneNumberVerified"
-                        android:background="@drawable/icon_delete" />
-
-
-                </RelativeLayout>
+                </androidx.recyclerview.widget.RecyclerView>
 
                 <LinearLayout
                     android:layout_width="match_parent"
