--- a/app/src/main/res/layout/manuka_fragment_enter_code.xml
+++ b/app/src/main/res/layout/manuka_fragment_enter_code.xml
@@ -1,14 +1,141 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:background="@color/colorWhite"
+    android:padding="16dp"
     tools:context=".ui.addphone.EnterCode">
 
-    <!-- TODO: Update blank fragment layout -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:orientation="horizontal"
+        tools:context=".ui.addphone.EnterCode">
+
+        <ImageView
+            android:layout_weight="0.1"
+            android:layout_gravity="center_vertical"
+            android:layout_width="80dp"
+            android:layout_height="70dp"
+            android:background="@drawable/icon_sms_medium"/>
+
+        <LinearLayout
+            android:layout_weight="0.9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            tools:context=".ui.addphone.EnterCode">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorBlack"
+                android:text="@string/enterCode_SMS_SENT_TO"
+                android:textSize="18sp"/>
+            <TextView
+                android:id="@+id/phoneNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorGreen"
+                android:text="@string/PhoneNumber"
+                android:textSize="16sp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/enterCode_time_arrive"
+                android:textSize="14sp"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
+        android:layout_height="1dp"
+        android:background="#33000000"/>
 
-</FrameLayout>
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/codeEntered"
+        android:layout_width="match_parent"
+        app:errorEnabled="true"
+        app:counterMaxLength="6"
+        app:counterEnabled="true"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:hint="@string/enterCode_editText_hint"
+            android:textColorHint="@color/colorGreen"
+            android:inputType="number"
+            android:layout_height="wrap_content"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <LinearLayout
+        android:id="@+id/phoneVerifyLayout"
+        android:layout_width="match_parent"
+        android:background="@color/colorGreyBtn"
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp"
+        android:padding="8dp"
+        android:layout_height="wrap_content">
+
+        <ProgressBar
+            android:id="@+id/progressBarCodeVerify"
+            android:layout_width="match_parent"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            android:indeterminate="true"
+            android:indeterminateTintMode="src_atop"
+            android:indeterminateTint="@color/colorWhite"
+            android:layout_height="24dp" />
+
+        <TextView
+            android:id="@+id/PhoneVerifyTextView"
+            android:visibility="visible"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:clickable="true"
+            android:textAllCaps="false"
+            android:textStyle="bold"
+            android:text="@string/order_phone_btn_verify"
+            android:textColor="@color/colorWhite"
+            android:textSize="20sp" />
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/enterCode_didnt_recieve"
+        android:gravity="center"
+        android:layout_marginTop="30dp"
+        android:textSize="18sp"
+        android:textColor="@color/colorBlackText"/>
+
+    <TextView
+        android:id="@+id/checkAgain"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/enterCode_check_your_phone_again"
+        android:gravity="center"
+        android:layout_marginTop="14dp"
+        android:layout_marginBottom="20dp"
+        android:textSize="16sp"
+        android:textColor="@color/colorGreen"/>
+
+    <LinearLayout
+        android:id="@+id/snackbar_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" />
+
+</LinearLayout>
