--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorBlue">#CC1043DE</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorBlack">#000000</color>
+    <color name="colorBlackText">#CC000000</color>
     <color name="colorGreyBtn">#bfbfbf</color>
     <color name="colorSucess">#00ff80</color>
     <color name="colorWhite">#ffffff</color>
