--- a/app/src/main/res/layout/manuka_fragment_contact_details.xml
+++ b/app/src/main/res/layout/manuka_fragment_contact_details.xml
@@ -166,4 +166,9 @@
         android:text="@string/contact_detailsTermsAndConditions"
         android:textSize="12sp" />
 
+    <FrameLayout
+        android:id="@+id/snackbar_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
 </LinearLayout>
