--- a/app/src/main/res/layout/manuka_fragment_categories_new_post.xml
+++ b/app/src/main/res/layout/manuka_fragment_categories_new_post.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,96 +8,49 @@
     android:orientation="vertical"
     tools:context=".ui.newPost.AllCategoriesNewPost">
 
-    <!-- Manuka -->
-
-    <androidx.core.widget.NestedScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <include layout="@layout/manuka_posting_allowance" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="14dp"
+            android:layout_weight="2"
+            android:background="#ffffff"
             android:orientation="vertical">
 
-
-            <LinearLayout
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:layout_marginBottom="10dp"
-                android:background="#ffffff"
-                android:orientation="horizontal"
-                android:padding="10dp">
+                android:layout_height="70dp"
+                android:gravity="center_vertical"
+                android:paddingStart="18dp"
+                android:text="@string/all_categories"
+                android:textColor="#b3b3b3"
+                android:textSize="16dp"></TextView>
 
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:gravity="center_vertical"
-                    android:layout_margin="10dp"
-                    android:background="@drawable/icon_rules_medium"></ImageView>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/posting_allowance"
-                        android:textAlignment="textStart"
-                        android:textColor="#000000"
-                        android:textStyle="bold"
-                        android:textSize="14dp"></TextView>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/free_on_ronicy"
-                        android:textAlignment="textStart"
-                        android:textColor="#b3b3b3"
-                        android:textSize="14dp"></TextView>
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="14dp"
-                android:layout_weight="2"
-                android:background="#ffffff"
-                android:orientation="vertical">
+                android:layout_height="70dp"
+                android:background="#0066ff"
+                android:gravity="center_vertical"
+                android:paddingStart="18dp"
+                android:text="@string/sell_an_item"
+                android:textColor="#ffffff"
+                android:textSize="16dp"></TextView>
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="70dp"
-                    android:paddingStart="18dp"
-                    android:gravity="center_vertical"
-                    android:text="@string/all_categories"
-                    android:textColor="#b3b3b3"
-                    android:textSize="16dp"></TextView>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:paddingStart="18dp"
-                    android:layout_height="70dp"
-                    android:gravity="center_vertical"
-                    android:background="#0066ff"
-                    android:text="@string/sell_an_item"
-                    android:textColor="#ffffff"
-                    android:textSize="16dp"></TextView>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/CategoryListPost"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/CategoryListPost"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
 
-                </androidx.recyclerview.widget.RecyclerView>
-            </LinearLayout>
-
+            </androidx.recyclerview.widget.RecyclerView>
         </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
 
-</RelativeLayout>
+    </LinearLayout>
+
+</androidx.core.widget.NestedScrollView>
