--- a/app/src/main/res/layout/manuka_fragment_location_selector.xml
+++ b/app/src/main/res/layout/manuka_fragment_location_selector.xml
@@ -19,6 +19,7 @@
         android:gravity="center"/>
 
     <LinearLayout
+        android:id="@+id/layoutTop"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="14sp"
