--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,12 +3,14 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorBlue">#CC1043DE</color>
+    <color name="colorBlueLite">#660066FF</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorBlack">#000000</color>
     <color name="colorBlackText">#CC000000</color>
     <color name="colorGreyBtn">#bfbfbf</color>
     <color name="colorSucess">#00ff80</color>
     <color name="colorWhite">#ffffff</color>
+    <color name="colorWhiteLite">#CCCCCC</color>
     <color name="colorDanger">#ff1a1a</color>
     <color name="colorWarning">#ffe066</color>
     <color name="colorHome">#e6ecff</color>
